Fixed #2104 - Items are not aligned on BreadCrumb

--- a/src/components/breadcrumb/BreadCrumb.css
+++ b/src/components/breadcrumb/BreadCrumb.css
@@ -13,4 +13,6 @@
 
 .p-breadcrumb .p-menuitem-link {
     text-decoration: none;
+    display: flex;
+    align-items: center;
 }
